# flask

./: .editorconfig  .env.example  .gitignore  MANIFEST.in  Makefile  README.md  app.py  config.py  pyproject.toml  requirements.txt  setup.py
app/: __init__.py
app/main/: __init__.py  routes.py
app/posts/: __init__.py  routes.py
app/questions/: __init__.py  routes.py
docker/development/: Dockerfile  docker-compose.yaml
flaskr/: __init__.py
images/: python-fastAPI.ai  python.psd
migrations/: env.py
migrations/versions/: 4e3dad970b73_m.py  654287f45819_create_post_table.py  a483fcdc541f_zzz.py  f41bcf24b7e0_initial_migration.py  fffffffff0001_create_post_table.py  fffffffff0002_.py
src/: __init__.py
src/app/: __init__.py  auth.py  blog.py
src/app/base/: base_repository.py  base_request.py  base_schema.py
src/app/config/: database.py
src/app/controllers/: __init__.py  campaign_impression_controller.py
src/app/main/: __init__.py  routes.py
src/app/models/: __init__.py  post.py
src/app/posts/: __init__.py  routes.py
src/app/providers/: auth_service_provider.py
src/app/questions/: __init__.py  routes.py
src/app/repositories/: __init__.py  (+4 more)
src/config/: __init__.py  constants.py  database.py  error_codes.py
src/extensions/: __init__.py  marshmallow.py
src/helpers/: __init__.py  common.py  exception_handler.py  make_response.py
src/routes/: __init__.py  campaign_impression_routes.py
src/templates/: base.html  index.html
templates/: home.html
tests/: conftest.py  data.sql  test_auth.py  test_blog.py  test_db.py  test_factory.py
(+14 files in other folders)
