[tool.poetry]
name = "report"
version = "0.1.0"
description = "Description"
authors = ["Hai Nghia <nghia.ho@permate.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.0.1"
flask-cors = "^3.0.10"
flask-marshmallow = "^0.15.0"
flask-migrate = "^4.0.4"
flask-sqlalchemy = "^2.5.1"
marshmallow = "^3.19.0"
marshmallow-sqlalchemy = "^0.29.0"
psycopg2 = "^2.9.6"
python-dotenv = "^1.0.0"
redshift-connector = "^2.0.911"
requests = "^2.31.0"
sqlalchemy = "^1.4.48"
sqlalchemy-redshift = "^0.8.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
